[FIX] web_enterprise: mention manager not cropped
When the mention manager is in a scrollable element, what is over the
top/left of that element will be hidden.

This happen really easily on enterprise desktop version since the
chatter is on the left and the composer is at the top of a scrollable
element.

This fix in the case of the sidebar chatter position the dropdown below
the composer avoiding the issue.

opw-814562
closes #1898

--- a/web_enterprise/static/src/less/form_view.less
+++ b/web_enterprise/static/src/less/form_view.less
@@ -528,6 +528,17 @@
             .o_chat_composer {
                 border-width: 1px 0;
                 margin-top: 0;
+
+                // have mention drowdown below composer
+                .o_composer_mention_dropdown {
+                    position: absolute;
+                    top: 100%;
+
+                    > .dropdown-menu {
+                        top: 100%;
+                        bottom: auto;
+                    }
+                }
             }
             .o_followers_title_box {
                 margin-left: @odoo-horizontal-padding/2;
